Add header and tagline

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   </head>
   <body>
     <div class="container">
+      <div class="header">
+        <span class="title">Columbia Convene</span>
+      </div>
+      <div class="tagline">
+        A snapshot of conversations occurring on Columbia's virtual campus
+      </div>
       <div id="vis"></div>
     </div>
     <script src="https://d3js.org/d3.v4.min.js"></script>
