--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
         A snapshot of conversations occurring on Columbia's virtual campus
       </div>
       <div id="vis"></div>
+      <div class="footer">
+        <div class="key">
+        </div>
+      </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="js/bubble.js"></script>
+    <script src="js/key.js"></script>
   </body>
 </html>
