Re-organize file structure

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Columbia Convene</title>
-    <link href="home.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/home.css" type="text/css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Actor&family=Open+Sans:wght@300&family=Open+Sans:wght@700&family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
     </div>
 
     <div class="graphic">
-        <img src="graphic.svg" alt="graphic" width="450" height="331.24">
+        <img src="assets/img/graphic.svg" alt="graphic" width="450" height="331.24">
     </div>
 
     <div class="desc">
@@ -28,11 +28,11 @@
 
     <div class="uni_title">UNI</div>
 
-    <div class="uni_input"></div>
+    <input type="text" class="uni_input"/>
 
     <div class="pass_title">Password</div>
 
-    <div class="pass_input"></div>
+    <input type="text" class="pass_input"/>
 
     <button class="login">Login</button>
 
