--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Columbia Convene</title>
-    <link rel="stylesheet" href="css/bubble.css">
+    <link rel="stylesheet" href="assets/css/bubble.css">
   </head>
   <body>
     <div class="container">
@@ -19,7 +19,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="js/bubble.js"></script>
-    <script src="js/key.js"></script>
+    <script src="assets/js/bubble.js"></script>
+    <script src="assets/js/key.js"></script>
   </body>
 </html>
