Make bubbles page responsive, add bounding box, add decay key

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Columbia Convene</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bubble.css">
   </head>
   <body>
@@ -12,9 +13,8 @@
         A snapshot of conversations occurring on Columbia's virtual campus
       </div>
       <div id="vis"></div>
-      <div class="footer">
-        <div class="key">
-        </div>
+      <div class="key">
+        <div class="key-label">Decay Key</div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
