--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Columbia Convene</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bubble.css">
+    <link rel="stylesheet" href="assets/css/modal.css">
   </head>
   <body>
     <div class="container">
@@ -22,11 +23,29 @@
         <div class="key-content"></div>
         <div class="key-info">After 7 days, bubbles will disappear</div>
       </div>
-      <button class="add-topic">+ Add New Topic</button>
+      <button class="add-topic lg-button">+ Add New Topic</button>
+    </div>
+    <div class="modal-container">
+      <div class="modal-content">
+        <div class="modal-title">Start a new conversation!</div>
+        <div class="modal-input">
+          <div class="modal-row">
+            <div>Name of Topic:</div>
+            <input class="modal-text" type="text"/>
+          </div>
+          <div class="modal-row">
+            <div>Add a Prompt:</div>
+            <input class="modal-text" type="text"/>
+          </div>
+          <input class="modal-button lg-button" type="button" value="Add Topic">
+        </div>
+        <img class="close-img" src="assets/img/close.svg" />
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="assets/js/bubble.js"></script>
     <script src="assets/js/key.js"></script>
+    <script src="assets/js/modal.js"></script>
   </body>
 </html>
