Make home page responsive

--- a/home.html
+++ b/home.html
@@ -8,36 +8,32 @@
 </head>
 <body>
     <div class="header">
-        <a>Columbia Convene</a>
+        <a href="/home.html">Columbia Convene</a>
     </div>
-
-    <div class="graphic">
-        <img src="assets/img/graphic.svg" alt="graphic" width="450" height="331.24">
-    </div>
-
-    <div class="desc">
-        <div>
-          <span>Columbia Convene</span> is an alternative way for students to feel connected even when they’re miles apart.
-          <br />
-          <br />
-          Join in on the campus conversations that are happening live today!
+    <div class="grid-container">
+        <div class="graphic">
+            <img src="assets/img/graphic.svg" alt="graphic" width="450" height="331.24">
+            <div class="desc">
+                <div>
+                <span>Columbia Convene</span> is an alternative way for students to feel connected even when they’re miles apart.
+                <br />
+                <br />
+                Join in on the campus conversations that are happening live today!
+                </div>
+            </div>
+        </div>
+        <div class="login-column">
+            <div class="login_title">LOGIN</div>
+            <div class="uni_title">UNI</div>
+            <input type="text" class="uni_input"/>
+            <div class="pass_title">Password</div>
+            <input type="password" class="pass_input"/>
+            <button class="login" onclick='window.location.href = "/"''>Login</button>
+            <button class="sign_up">Sign Up</button>
         </div>
     </div>
-
-    <div class="login_title">LOGIN</div>
-
-    <div class="uni_title">UNI</div>
-
-    <input type="text" class="uni_input"/>
-
-    <div class="pass_title">Password</div>
-
-    <input type="text" class="pass_input"/>
-
-    <button class="login">Login</button>
-
-    <button class="sign_up">Sign Up</button>
-
-    <div class="footer">&#169 Team Stealth Ninja Samurai</div>
+    <div class="footer">
+        <span>&#169 Team Stealth Ninja Samurai</span>
+    </div>
 </body>
 </html>
