--- a/index.html
+++ b/index.html
@@ -1,51 +1,39 @@
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <title>Columbia Convene</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/bubble.css">
-    <link rel="stylesheet" href="assets/css/modal.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <a class="title" href="/">Columbia Convene</a>
-        <div class="profile">
-          <img class="profile-img" src="assets/img/profile_05.png"/>
-          <span class="profile-name">Evelyn Stein</span>
-        </div>
-      </div>
-      <div class="tagline">
-        A snapshot of conversations occurring on Columbia's virtual campus
-      </div>
-      <div id="vis"></div>
-      <div class="key">
-        <div class="key-label">Decay Key</div>
-        <div class="key-content"></div>
-        <div class="key-info">After 7 days, bubbles will disappear</div>
-      </div>
-      <button class="add-topic lg-button">+ Add New Topic</button>
+    <link href="assets/css/index.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Actor&family=Open+Sans:wght@300&family=Open+Sans:wght@700&family=Roboto&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="header">
+        <a href="/">Columbia Convene</a>
     </div>
-    <div class="modal-container">
-      <div class="modal-content">
-        <div class="modal-title">Start a new conversation!</div>
-        <div class="modal-input">
-          <div class="modal-row">
-            <div>Name of Topic:</div>
-            <input class="modal-text" type="text"/>
-          </div>
-          <div class="modal-row">
-            <div>Add a Prompt:</div>
-            <input class="modal-text" type="text"/>
-          </div>
-          <input class="modal-button lg-button" type="button" value="Add Topic">
+    <div class="grid-container">
+        <div class="graphic">
+            <img src="assets/img/graphic.svg" alt="graphic" width="450" height="331.24">
+            <div class="desc">
+                <div>
+                <span>Columbia Convene</span> is an alternative way for students to feel connected even when they’re miles apart.
+                <br />
+                <br />
+                Join in on the campus conversations that are happening live today!
+                </div>
+            </div>
         </div>
-        <img class="close-img" src="assets/img/close.svg" />
-      </div>
+        <div class="login-column">
+            <div class="login_title">LOGIN</div>
+            <div class="uni_title">UNI</div>
+            <input type="text" class="uni_input"/>
+            <div class="pass_title">Password</div>
+            <input type="password" class="pass_input"/>
+            <button class="login" onclick='window.location.href = "/bubbles.html"''>Login</button>
+            <button class="sign_up">Sign Up</button>
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="assets/js/bubble.js"></script>
-    <script src="assets/js/key.js"></script>
-    <script src="assets/js/modal.js"></script>
-  </body>
+    <div class="footer">
+        <span>&#169 Team Stealth Ninja Samurai</span>
+    </div>
+</body>
 </html>
