Fix relative links

--- a/bubbles.html
+++ b/bubbles.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <a class="title" href="/bubbles.html">Columbia Convene</a>
+        <a class="title" href="#">Columbia Convene</a>
         <div class="profile">
           <img class="profile-img" src="assets/img/profile_05.png"/>
           <span class="profile-name">Evelyn Stein</span>
