--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="/">Columbia Convene</a>
+        <a href="#">Columbia Convene</a>
     </div>
     <div class="grid-container">
         <div class="graphic">
@@ -28,12 +28,18 @@
             <input type="text" class="uni_input"/>
             <div class="pass_title">Password</div>
             <input type="password" class="pass_input"/>
-            <button class="login" onclick='window.location.href = "/bubbles.html"''>Login</button>
+            <button class="login" onclick='window.location.href = "./bubbles.html"''>Login</button>
             <button class="sign_up">Sign Up</button>
         </div>
     </div>
     <div class="footer">
         <span>&#169 Team Stealth Ninja Samurai</span>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(() => {
+            $('.header > a').attr('href', window.location.href)
+        });
+    </script>
 </body>
 </html>
