Make chat UI interactive

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Columbia Convene</title>
+    <link rel="stylesheet" href="assets/css/common.css">
     <link href="assets/css/index.css" type="text/css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Actor&family=Open+Sans:wght@300&family=Open+Sans:wght@700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-        <a href="#">Columbia Convene</a>
+        <a class="title" href="#">Columbia Convene</a>
     </div>
     <div class="grid-container">
         <div class="graphic">
