--- a/bubbles.html
+++ b/bubbles.html
@@ -2,6 +2,7 @@
   <head>
     <title>Columbia Convene</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/common.css">
     <link rel="stylesheet" href="assets/css/bubbles.css">
     <link rel="stylesheet" href="assets/css/modal.css">
   </head>
